# crypto-ml-volatility

./: Dockerfile  Makefile  README.md  config.yaml  pyproject.toml  requirements.txt
data/sample/: BTC-USD_sample.csv
scripts/: prepare_data.py  run_backtest.py  train_garch.py
src/cryptoml_vol/: config.py
src/cryptoml_vol/app/: streamlit_app.py
src/cryptoml_vol/backtest/: metrics.py  walkforward.py
src/cryptoml_vol/data/: download.py  preprocess.py
src/cryptoml_vol/features/: indicators.py
src/cryptoml_vol/models/: garch.py  hmm_regime.py  prophet_model.py
src/cryptoml_vol/risk/: var_cvar.py
src/cryptoml_vol/utils/: io.py  plotting.py
