[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptoml-volatility"
version = "0.1.0"
description = "End-to-end starter for crypto volatility modeling with Streamlit, GARCH, and risk."
readme = "README.md"
authors = [{name="Your Name", email="you@example.com"}]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
